--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "author": "Raphaël Choquet",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "config": "^1.21.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "mongoose": "^4.5.7"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
